# PermisC

./: .gitattributes  .gitignore  LICENSE  Makefile  PermisC.sh  Présentation.md  README.md  shell.txt
awk_computations/: d1.awk  d2.awk  l.awk
demo/: result_s.txt
gnuplot_scripts/: d1.gp  d2.gp  l.gp  s.gp  t.gp
progc/: CMakeLists.txt  Makefile  build_vars.sh  debug.sh  run.sh
progc/src/: avl.c  avl.h  compile_settings.h  delimiter_search.h  magic_strcmp.h  main.c  map.h  mem_alloc.h  options.c  options.h  partition.h  profile.c  profile.h  route.c  route.h  string_avl.c  string_avl.h
progc/src/computations/: computation_d1.c  computation_d1_ex.c  computation_d2_ex.c  computation_l_ex.c  computation_s.c  computation_s_ex.c  computation_t.c  computation_t_ex.c  computations.h
